[package]
name = "rns-vpn"
description = "P2P Reticulum VPN"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
clap = { version= "4.*", features= ["derive"] }
ed25519-dalek = { version = "2.*", features = ["pem", "pkcs8"] }
env_logger = "0.11.*"
etherparse = "0.19.*"
ipnet = { version = "2.*", features = ["serde"] }
log = "0.4.*"
nix = "0.23.*"
pem = "3.*"
rand_core = { version = "0.6.*", features = ["getrandom"] }
riptun = { version = "0.1.*", default-features = false, features = ["tokio-impl"] }
serde = { version = "1.*", features = ["derive"] }
tokio = { version = "1.44.*", features = ["full"] }
toml = "0.8.*"
x25519-dalek = "2.*"

[dependencies.reticulum]
git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs"
#path = "../../remote/Reticulum-rs"
version = "0.1.*"
